# local_tcp

./: .gitignore  API.md  DeveloperIDApplication.p12  DeveloperIDInstaller.p12  LICENSE  README.md  background.js  content.js  manifest.json  popup.html  popup.js
.github/workflows/: release.yml
host/: com.algonize.localtcp.json  com.algoramming.localtcp.json  guide.txt  guide_linux.txt  guide_mac.txt  guide_windows.txt  index.js  install_setup_linux.sh  install_setup_mac.command  install_setup_mac.pkg  install_setup_mac.sh  install_setup_windows.bat  install_setup_windows.ps1  uninstall_setup_linux.sh  uninstall_setup_mac.command  uninstall_setup_mac.pkg  uninstall_setup_mac.sh  uninstall_setup_windows.bat  uninstall_setup_windows.ps1
host-go/: build.sh  go.mod  main.go
host/pkg_build/payload/usr/local/lib/com.algoramming.localtcp/: index.js
host/uninstaller_pkg/scripts/: postinstall
installers/linux/: build_run.sh  uninstall.sh
installers/mac/: build_pkg.sh  build_uninstall_pkg.sh
installers/mac/uninstaller-app/Uninstall Local TCP.app/Contents/: Info.plist
installers/mac/uninstaller-app/Uninstall Local TCP.app/Contents/MacOS/: uninstall
installers/rust/: Cargo.toml  README.md  build.sh
installers/rust/src/: main.rs
installers/windows/: installer.iss  uninstall.ps1  uninstaller.iss
